# simulator

./: CMakeLists.txt  Dockerfile  README.md  package.xml
App/: CMakeLists.txt  ReadCsv.cpp
Test/: CMakeLists.txt  Test_camera.cpp  Test_dynamic.cpp  Test_kinematic.cpp  Test_serialization.cpp  proveVarie.cpp
include/bridge/: bridge.hpp  custom_message.hpp
include/common/: car.hpp  car_state.hpp  math_stuff.hpp  types.hpp
include/sensors/: camera.hpp
src/: Test_kinematic.cpp  main_prova.cpp  my_node.cpp  prova_dynamic.cpp  prova_kinematic.cpp
src/bridge/: bridge.cpp  server.cpp
src/common/: car.cpp  car_state.cpp  math_stuff.cpp
src/sensors/: camera.cpp
